[tool.poetry]
name = "telebot-components"
version = "0.0.0"
description = "Framework/toolkit for building Telegram bots with telebot and redis"
authors = ["Igor Vaiman <gosha.vaiman@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/bots-against-war/telebot-components"
packages = [{include = "telebot_components"}]

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
coverage = "^7.2.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
style="semver"

[tool.poetry.dependencies]
python = "^3.10"
telebot-against-war = "^0.6.11"
redis = "^5.0.1"
py-trello = "^0.18.0"
markdownify = "^0.11.2"
pytest-mock = "^3.7.0"
"ruamel.yaml" = "^0.17.21"
pyairtable = "^1.5.0"
Pillow = "^10.0.1"
markdown = "^3.4.1"
beautifulsoup4 = "^4.11.1"
tenacity = "^8.1.0"
async-lru = "^2.0.2"
cryptography = "^41.0.6"
toml = "^0.10.2"
urllib3 = "^1.26.18"
diff-match-patch = "^20230430"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"
aioresponses = "0.7.6"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
mypy = "^0.960"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    'integration: requires a real bot to run',
]

[tool.mypy]
incremental = false
files = '.'

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "F841",  # local variable 'xxx' is assigned to but never used
    "E203",  # whitespace before ':' (black formatting compatibility)
]
