[tool.poetry]
name = "telebot-components"
version = "0.0.0"
description = "Framework/toolkit for building Telegram bots with telebot and redis"
authors = ["Igor Vaiman <gosha.vaiman@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/bots-against-war/telebot-components"
packages = [{ include = "telebot_components" }]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.10"
telebot-against-war = "^0.7.0"
redis = "^5.0.1"
py-trello = "^0.18.0"
markdownify = "^0.11.2"
pytest-mock = "^3.7.0"
"ruamel.yaml" = "^0.17.21"
pyairtable = "^1.5.0"
Pillow = "^10.0.1"
markdown = "^3.4.1"
beautifulsoup4 = "^4.11.1"
tenacity = "^8.1.0"
async-lru = "^2.0.2"
cryptography = "^44.0.1"
toml = "^0.10.2"
urllib3 = "^1.26.18"
diff-match-patch = "^20230430"
aiohttp = "^3.11.6"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"
mypy = "^1.9.0"
pytest = "^7.1.2"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"
aioresponses = "0.7.6"
pre-commit = "^2.19.0"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  # check and fix imports

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ['integration: requires a real bot to run']

[tool.mypy]
incremental = false
files = '.'

[tool.coverage.run]
# this way coverage will show even files that are not imported at all
source = ['telebot_components']

[tool.coverage.report]
fail_under = 70
skip_covered = true
show_missing = true
exclude_lines = [
    # re-enable the standard pragma
    'pragma: no cover',
    # non-runnable code
    'if __name__ == .__main__.:',
    # abstract methods aren't run:
    '@(abc\.)?abstractmethod',
    # ellipsis is used in abstract method bodies
    '\.\.\.',
    # stub methods
    'raise NotImplementedError()',
]
